--- a/src/css/calendar.css
+++ b/src/css/calendar.css
@@ -1,13 +1,8 @@
 .calendar {
   text-align: left;
+  display: inline-block;
 }
 
-.calendar > table {
-  background-color: rgba(0,0,0,.5);
-  color: #eee;
-
-  margin: auto;
-}
 
 .calendar td, th{
   padding: .5em;
